test/deprecated/legacy-classes-param.chpl

if chpl_legacyClasses then
  compilerError("yes");

if !chpl_legacyClasses then
  compilerError("no");
